# genkit

./: .gitignore  package.json  pnpm-lock.yaml
.github/workflows/: build-cli-binaries.yml  builder.yml  bump-cli-version.yml  bump-js-version.yml  bump-package-version.yml  commitlint.yml  e2e-tests.yml  formatter.yml  go.yml  publish_python.yml  python-samples.yml  python.yml  release_js_main.yml  release_js_package.yml  release_rc_python.yml  samples.yml  tests.yml  todo-lint.yml
docs/: agent-js.md  session-flow-js.md
genkit-tools/: package.json  pnpm-lock.yaml
genkit-tools/cli/: package.json
genkit-tools/common/: package.json
genkit-tools/common/src/types/: agent.ts
genkit-tools/telemetry-server/: package.json
go/: go.mod  go.sum
go/core/: error_test.go
go/plugins/vertexai/modelgarden/: anthropic.go  define_model_test.go  internal_test.go  llama.go  mistral.go  mistral_transport.go  mistral_transport_test.go  models.go  models_test.go
go/samples/modelgarden/: main.go
go/samples/modelgarden-llama/: main.go
js/: pnpm-lock.yaml
js/ai/src/: agent.ts  index.ts  session-flow.ts  session.ts  tool.ts
js/ai/tests/: agent_test.ts  session-flow_test.ts
js/ai/tests/generate/: action_test.ts  generate_test.ts
js/ai/tests/model/: middleware_test.ts
js/core/src/: reflection-v2.ts  utils.ts
js/core/tests/: dynamic-action-provider_test.ts  reflection-v2_test.ts  utils_test.ts
js/genkit/src/: beta.ts  genkit-beta.ts
js/genkit/src/client/: client.ts
js/genkit/tests/: chat_test.ts  generate_test.ts  prompts_test.ts
js/plugins/compat-oai/src/: model.ts
js/plugins/compat-oai/tests/: compat_oai_test.ts
js/plugins/google-cloud/: package.json
js/testapps/agents/prompts/: tripPlanner.prompt
js/testapps/agents/skills/typescript/: SKILL.md
js/testapps/agents/src/: coding-agent.ts  custom-agent.ts  custom-state-agent.ts  index.ts  prompt-file-agent.ts  subagent-demo.ts
js/testapps/agents/web/src/: App.css  App.tsx  main.tsx
js/testapps/agents/web/src/components/: ChatUI.tsx
js/testapps/next/: package.json
py/: pyproject.toml
py/plugins/middleware/: README.md  pyproject.toml
py/plugins/middleware/src/genkit/plugins/middleware/: __init__.py  _fallback.py  _filesystem.py  _retry.py  _skills.py  _tool_approval.py
py/plugins/middleware/tests/: fallback_test.py  filesystem_test.py  retry_test.py  skills_test.py  tool_approval_test.py
py/samples/middleware/src/: main.py
samples/js-chatbot/genkit-app/: package-lock.json
scripts/: copyright.ts
(+11 files in other folders)
